--- a/starter.html
+++ b/starter.html
@@ -52,6 +52,73 @@ scratch. This page gets rid of all links and provides the needed markup only.
   |---------------------------------------------------------|
   -->
   <body class="hold-transition skin-blue sidebar-mini">
+  
+  
+  
+  
+  
+  </section>
+
+   
+
+  <!-- Main content -->
+<section class="content">
+
+  <div class="col-md-9">
+    <div class="box box-primary">
+      <div class="box-header with-border">
+        <h3 class="box-title">Compose New Message</h3>
+      </div>
+
+      <div class="box-body">
+        <div class="form-group">
+          <input class="form-control" placeholder="To:">
+        </div>
+        <div class="form-group">
+          <input class="form-control" placeholder="Subject:">
+        </div>
+
+        <div class="form-group">
+          <textarea class="form-control" style="height: 300px; ">
+</div>                          
+           
+
+
+<div class="box-footer">
+<div class="pull-right">
+<button type="button" class="btn btn-default"><i class="fa fa-pencil"></i> Draft</button>
+<button type="submit" class="btn btn-primary"><i class="fa fa-envelope-o"></i> Send</button>
+</div>
+<button type="reset" class="btn btn-default"><i class="fa fa-times"></i> Discard</button>
+</div>
+
+</div>
+
+</div>
+
+</div>
+
+</section>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
     <div class="wrapper">
 
       <!-- Main Header -->
